app/assets/stylesheets/base.scss
main {
  font-family: helvetica, sans-serif;
  // display: grid;
  background: white;
}

.fixed {
  position: fixed;
}

.hidden {
  display: none;
}

button {
  width: 100%;
  padding: 1rem;
  max-height: 3.2rem;
  border-radius: .2rem;
  margin-top: .7rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #FF5A5F;
  color: white;
}

button:active {
  max-height: 3.2rem;
}

input:placeholder-shown {
  color: #aaa;
}

hr {
  width: 100%;
  border: 0;
  border-bottom: 1px solid #ddd;
  margin: 1.5rem 0;
}

i[class*="i"] {
  color: #666666;
}

::-webkit-scrollbar{
    width: 1rem;
    height: 1rem;
}

::-webkit-scrollbar-track{

    border-radius: 0;
    background: rgb(255, 255, 255);
}
::-webkit-scrollbar-thumb{
    width: .5rem;
    height: .5rem;
    background: -webkit-linear-gradient(#ffffff, #d5d5d5);
}

::-webkit-scrollbar-track-piece {
    height: 30px;
    width: 30px;
}

